k8s/back-deployment.yaml
# k8s/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: seynabou02/express-backend:latest
        ports:
        - containerPort: 5000
